# TDDAPG_example

./: CMakeLists.txt  DuplicateMovieException.h  Movie.h  MovieList.cpp  MovieList.h  MovieListEditor.h  MovieListEditorView.h  QtMovieListEditorView.cpp  QtMovieListEditorView.h  QtMovieRating.cpp  QtMovieRating.h  UnratedException.h  common.h  images.qrc  main.cpp  mock_MovieListEditorView.h
tests/: CMakeLists.txt  Movie_test_helper.h  QtMessageBoxHelper.cpp  QtMessageBoxHelper.h  TestMovie.cpp  TestMovieList.cpp  TestMovieListEditor.cpp  TestMovieListWithPopulatedList.cpp  TestQtMovieListEditorView.cpp
